--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        .version-text {
+            font-size: 3em;
+            color: white;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+
 <body style="background-color:black;">
-<div class="container" style="text-align:center;">
-<img style="width:40%; height:auto;" src="circus.jpg">
-</div>
+    <div class="container" style="text-align:center;">
+        <img style="width:40%; height:auto;" src="circus.jpg">
+        <!-- Выводим текст с классом для стилей -->
+        <div class="version-text">Version: 1</div>
+    </div>
 </body>
+
 </html>
