--- a/web/index.html
+++ b/web/index.html
@@ -21,9 +21,8 @@
         }
 
         .container img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            width: 80%;
+            height: auto;
         }
     </style>
 </head>
