--- a/web/index.html
+++ b/web/index.html
@@ -4,25 +4,38 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        html,
         body {
             margin: 0;
-            height: 100vh;
-            background-color: black;
+            padding: 0;
+            height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
+            background-color: black;
             color: white;
+            overflow: hidden;
         }
 
         h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
+            font-size: 2em;
+            margin: 0;
+            padding-top: 10px;
+        }
+
+        .container {
+            width: 100%;
+            height: calc(100% - 50px);
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .container img {
-            width: 80%;
-            height: auto;
+            max-width: 90%;
+            max-height: 90%;
+            object-fit: contain;
         }
     </style>
 </head>
